--- a/chuyende/chuyende/chuyende.csproj
+++ b/chuyende/chuyende/chuyende.csproj
@@ -130,12 +130,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\ChiTietHoaDonsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ChucVusController.cs" />
+    <Compile Include="Areas\Admin\Controllers\DangNhapController.cs" />
     <Compile Include="Areas\Admin\Controllers\HangsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\HoaDonsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\KhachHangsController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoaiSanPhamsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\DangNhapController.cs" />
     <Compile Include="Areas\Admin\Controllers\NhanViensController.cs" />
     <Compile Include="Areas\Admin\Controllers\SanPhamsController.cs" />
     <Compile Include="Controllers\CartController.cs" />
@@ -241,12 +243,17 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\ChucVus\Create.cshtml" />
     <Content Include="Areas\Admin\Views\ChucVus\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\ChucVus\Details.cshtml" />
     <Content Include="Areas\Admin\Views\ChucVus\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\ChucVus\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\DangNhap\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Hangs\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Hangs\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Hangs\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Hangs\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Hangs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Index.cshtml" />
     <Content Include="Areas\Admin\Views\KhachHangs\Create.cshtml" />
     <Content Include="Areas\Admin\Views\KhachHangs\Delete.cshtml" />
@@ -263,18 +270,23 @@
     <Content Include="Areas\Admin\Views\NhanViens\Details.cshtml" />
     <Content Include="Areas\Admin\Views\NhanViens\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\NhanViens\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Shared\_LayoutAdmin.cshtml" />
-    <Content Include="Areas\Admin\Views\Hangs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Hangs\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Hangs\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Hangs\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Hangs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\SanPhams\Create.cshtml" />
     <Content Include="Areas\Admin\Views\SanPhams\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\SanPhams\Details.cshtml" />
     <Content Include="Areas\Admin\Views\SanPhams\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\SanPhams\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\DangNhap\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Areas\Admin\Views\web.config" />
+    <Content Include="Areas\Admin\Views\ChiTietHoaDons\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\ChiTietHoaDons\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\ChiTietHoaDons\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\ChiTietHoaDons\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ChiTietHoaDons\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDons\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDons\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDons\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDons\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDons\Index.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -303,7 +315,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Admin\Data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
