--- a/chuyende/chuyende/chuyende.csproj
+++ b/chuyende/chuyende/chuyende.csproj
@@ -143,9 +143,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202503170242429_InitialCreate.cs" />
-    <Compile Include="Migrations\202503170242429_InitialCreate.Designer.cs">
-      <DependentUpon>202503170242429_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\202503181453415_InitialCreate.cs" />
+    <Compile Include="Migrations\202503181453415_InitialCreate.Designer.cs">
+      <DependentUpon>202503181453415_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ChiTietHoaDon.cs" />
@@ -189,7 +189,7 @@
     <Content Include="Public\css\Admin\Detailssp.css" />
     <Content Include="Public\css\Admin\layoutadmin.css" />
     <Content Include="Public\css\Admin\login.css" />
-    <Content Include="Public\css\Use\dangnhap.css" />
+    <Content Include="Public\css\Use\dangnhapky.css" />
     <Content Include="Public\css\Use\giohang.css" />
     <Content Include="Public\css\Use\layout.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -294,8 +294,8 @@
     <Content Include="Scripts\jquery-3.7.0.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202503170242429_InitialCreate.resx">
-      <DependentUpon>202503170242429_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202503181453415_InitialCreate.resx">
+      <DependentUpon>202503181453415_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
